--- a/tpl/error.html
+++ b/tpl/error.html
@@ -6,7 +6,7 @@
 		<h1>Une erreur a eu lieu...</h1>
 	</div>
 	<div class="bodyblock">
-		<p style="text-align: center; color: red; font-family: monospace, courier, serif">
+		<p class="error">
 			{.section Error}
 				HTTP ERROR {Code}
 				{.section Error}<br />{@}{.end}
