--- a/tpl/register.html
+++ b/tpl/register.html
@@ -8,6 +8,9 @@
 		des foncionnalités d'apprentissage suivi.</p>
 	</div>
 	<div class="bodyblock">
+		{.section Data.Error}
+			<p class="error">{@}</p>
+		{.end}
 		<form method="POST" class="big_form">
 			<label for="username">Nom d'utilisateur : </label>
 			<input type="text" name="username" id="username" /><br />
