Now users can select lessons to study.

--- a/tpl/base.html
+++ b/tpl/base.html
@@ -37,8 +37,8 @@
 		<a href="ajstk.org/kimidori" class="right">Comment contribuer ?</a>
 ~~CALL bottom
 {.section Sess.Admin}
-		<a href="/reload_tpl{Request.URL.RawPath}">reload_tpl</a>
-		<a href="/reload_data{Request.URL.RawPath}">reload_data</a>
+		<a href="/reload_tpl?back={Request.URL.RawPath}">reload_tpl</a>
+		<a href="/reload_data?back={Request.URL.RawPath}">reload_data</a>
 {.end}
 	</div>
 </div>
