--- a/tpl/login.html
+++ b/tpl/login.html
@@ -24,4 +24,4 @@
 	</div>
 
 ~~DEFINE bottom
-	<a href="/register">Créer un compte</a>
+	<a href="/register{.section Data.ReturnTo}?back={@}{.end}">Créer un compte</a>
