--- a/tpl/register.html
+++ b/tpl/register.html
@@ -30,4 +30,4 @@
 		<p>* : Tous les champs sont obligatoires sauf ceux marqués d'une astérisque (*).</p>
 	</div>
 ~~DEFINE bottom
-	<a href="/login">Ouvrir une session</a>
+	<a href="/login{.section Data.ReturnTo}?back={@}{.end}">Ouvrir une session</a>
