--- a/tpl/chunk_summary.html
+++ b/tpl/chunk_summary.html
@@ -54,6 +54,8 @@
 				<strong>{HTMLWithFuri}</strong>
 				{Meaning}
 			</div>
+		{.or}
+			<p>Rien à apprendre pour l'instant... mais ça ne va pas tarder !</p>
 		{.end}
 	</div>
 {.end}
