--- a/tpl/home.html
+++ b/tpl/home.html
@@ -22,6 +22,8 @@
 			quantité que vous voulez, quand vous le voulez. Les cours sont aussi organisés
 			pour permettre un apprentissage unifié et linéaire.</li>
 		</ul>
+		<h2>Par où commencer ?</h2>
+		<p>Nous vous conseillons de lire d'abord <a href="/help">la page d'aide</a></p>
 	</div>
 	<div class="rightblock">
 		<h2>On recherche des contributeurs !</h2>
