(FR) Affichage de furigana ; page de configuration.

--- a/tpl/browse.html
+++ b/tpl/browse.html
@@ -8,7 +8,7 @@
 	<div id="top">
 		<h1>
 			{.repeated section Levels}
-				<a href="/browse/{Id|str}">{Info.Name|html}</a> - 
+				<a href="/browse/{Id|str}">{Info.Name|html}</a>&nbsp;&nbsp;&nbsp;
 			{.end}
 		</h1>
 		{.section Level}
