--- a/tpl/chunk_summary.html
+++ b/tpl/chunk_summary.html
@@ -67,6 +67,6 @@
 	<a href="/chunk_read/{Level.Id}/{Lesson.Id}/{Id}">Lire le cours</a>
 {.end}
 {.section Data.Lesson}
-	<a href="/browse/{Level.Id}/{Id}">Retour à la leçon</a>
+	<a href="/browse/{Level.Id}/{Id}" class="right">Retour à la leçon</a>
 {.end}
 
