--- a/tpl/home.html
+++ b/tpl/home.html
@@ -47,5 +47,6 @@
 		contenu.</p>
 	</div>
 ~~DEFINE bottom
+		<a href="/how_to_contribute" class="right">Comment contribuer ?</a>
 		<a href="/browse/Conversation">Guide rapide de conversation</a>
 		<a href="/browse/Debutant">Commencer un apprentissage sérieux</a>
