Minor path change.

--- a/tpl/base.html
+++ b/tpl/base.html
@@ -29,7 +29,7 @@
 		<a class="right" href="/register?back={Request.URL.RawPath}">Créer un compte</a>
 	{.end}
 		<a href="/">Accueil</a>
-		<a href="/study_home/">Études</a>
+		<a href="/study_home">Études</a>
 		<a href="/browse/">Tous les cours</a>
 		<a href="/srs_home/">Révisions</a>
 	</div>
