(FR) Système de mémorisation plutôt cool.

--- a/tpl/base.html
+++ b/tpl/base.html
@@ -31,7 +31,7 @@
 		<a href="/">Accueil</a>
 		<a href="/study_home">Études</a>
 		<a href="/browse/">Tous les cours</a>
-		<a href="/srs_home/">Révisions</a>
+		<a href="/srs_home">Révisions</a>
 	</div>
 ~~CALL body
 	<div id="bottombar" class="menubar">
