Corrected minor error.

--- a/tpl/srs_review_drill.html
+++ b/tpl/srs_review_drill.html
@@ -61,8 +61,8 @@ alert("Gros fail... lol :D");
 		<label>Lecture :</label><div id="a_r_div"></div><br />
 		<label>Commentaire :</label><div id="a_c_div"></div><br />
 		<label>Note personnelle :</label><div>(non implémenté)</div><br />
-		<button onclick="SRS.success();" id="a_sb" tabindex="1"><img src="../image/check.png" />Correct</button><br />
-		<button onclick="SRS.fail();" tabindex="2"><img src="../image/red_cross.png" />Faux</button>
+		<button onclick="SRS.success();" id="a_sb" tabindex="1"><img src="/image/check.png" />Correct</button><br />
+		<button onclick="SRS.fail();" tabindex="2"><img src="/image/red_cross.png" />Faux</button>
 	</form>
 
 
