--- a/tpl/chunk_summary.html
+++ b/tpl/chunk_summary.html
@@ -11,6 +11,9 @@
 	</div>
 {.end}
 	<div class="leftblock">
+		{.section Data.Lesson}
+			<a href="/browse/{FullId}" class="tool_link">Retour à la leçon</a>
+		{.end}
 		{.section Data.Chunk}
 			<h2>Sommaire</h2>
 			<ol>
