(FR) Présentation en diapositives du contenu de la leçon

--- a/tpl/base.html
+++ b/tpl/base.html
@@ -6,8 +6,9 @@
 	<link rel="stylesheet" type="text/css" href="/style/style.css" media="screen" />
 	<script type="text/javascript" src="/js/prototype.js"></script>
 	<script type="text/javascript" src="/js/dic.js"></script>
+~~CALL scripts
 </head>
-<body>
+<body onload="do_load();">
 <div id="tout">
 	<form id="dicbar" onsubmit="Dic.submit();return false;">
 		Dictionnaire : 
@@ -46,6 +47,8 @@
 </html>
 ~~DEFINE title
 	<title>NO TITLE</title>
+~~DEFINE scripts
+	<!-- aditionnal scripts here -->
 ~~DEFINE body
 	Template not ready yet.
 ~~DEFINE bottom
