Minor bug corrections && style changes.

--- a/tpl/chunk_summary.html
+++ b/tpl/chunk_summary.html
@@ -55,7 +55,7 @@
 	<div class="rightblock">
 		<h2>Eléments à apprendre</h2>
 		{.repeated section SRSItemsWS}
-			<div class="{.section Item.Long}srs_item_big{.or}srs_item{.end}{.section Known} siknown{.or}{.section Studying} sib{Box}{.end}{.end}">
+			<div class="srs_item_big{.section Known} siknown{.or}{.section Studying} sib{Box}{.end}{.end}">
 				<h6>{Item.Group}<br />{Item.Subgroup}</h6>
 				<strong>{Item.HTMLWithFuri}</strong>
 				{Item.Meaning}
